Closed Bug 764637 Opened 13 years ago Closed 13 years ago

nsIMsgHeaderParser.parseHeadersWithArray should return error code if msg_parse_Header_addresses fails.

Categories

(MailNews Core :: MIME, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 17.0

People

(Reporter: hiro, Assigned: hiro)

Details

Attachments

(1 file)

Attached patch FixSplinter Review
Assignee: nobody → hiikezoe
Status: NEW → ASSIGNED
Attachment #632941 - Flags: review?(mbanner)
Comment on attachment 632941 [details] [diff] [review] Fix Review of attachment 632941 [details] [diff] [review]: ----------------------------------------------------------------- Looks fine, I took a look through the callers as well, and they all seem safe.
Attachment #632941 - Flags: review?(mbanner) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 17.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: