Bug 764637 - nsIMsgHeaderParser.parseHeadersWithArray returns NS_ERROR_FAILURE if msg_parse_Header_addresses fails. r=mbanner